--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -26,7 +26,7 @@
     }
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     margin: 0 50px;
     background-color: hsl(218, 14%, 11%,0.7);
   border: 1px solid hsl(222, 18%, 61%);
@@ -38,8 +38,9 @@
 
       li {
         font-size: 23px;
-        color: #ffffff;
+        color: #b3ff02;
         transition: all 0.5s ease-in-out;
+        font-weight: bold;
         &:hover {
           color: #0099ff;
           cursor: pointer;
