--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -61,6 +61,9 @@
           color: #0099ff;
         }
       }
+      .btn-icon{
+        display:none;
+      }
     }
     .right-header {
       .btn-txt {
@@ -173,6 +176,45 @@
         &:last-child {
           margin-left: 0;
         }
+      }
+    }
+  }
+  @media (max-width: 569px) {
+    margin: 0 ;
+    padding: 10px;
+    border-radius: 0 0 20px 20px;
+    border: 1px solid hsl(221, 15%, 22%);
+
+
+    h1 {
+      font-size: 22px;
+    }
+    .btn-txt{
+      display: none;
+    }
+    .container{
+      .left-header{
+        
+    .btn-icon{
+      display: block;
+      margin-top: 20px;
+      margin-right: 10px;
+      margin-left: 25px;
+      svg {
+        width: 40px;
+        height: 40px;
+        fill: #0099ff;
+      }
+      &:hover {
+        background-color: #0099ff;
+        color: #ffffff;
+        svg{
+          fill: #ffffff;
+        }
+  
+      }
+    }
+  
       }
     }
   }
