--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -120,7 +120,7 @@
   }
 
   // Media Queries
-  @media (max-width: 768px) {
+  @media (max-width: 1200px) {
     padding: 20px;
     margin:  0 50px;
     border-radius: 0 0 20px 20px;
@@ -160,6 +160,7 @@
     padding: 15px;
     margin: 20px 15px;
     border-radius: 12px;
+    border:1px solid #0099ff;
 
     h1 {
       font-size: 22px;
