--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,4 +1,25 @@
+@import './animations';
 
+.content {
+  &.fade-enter {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  &.fade-enter-active {
+    opacity: 1;
+    transform: translateY(0);
+    transition: opacity 0.5s, transform 0.5s;
+  }
+  &.fade-exit {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  &.fade-exit-active {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.5s, transform 0.5s;
+  }
+}
 .links {
   padding: 20px;
   margin: 60px;
